2006-10-13  Yen-Ju Chen <yjchen at gmail>

    * Fix top level;

2006-10-12  Yen-Ju Chen <yjchen at gmail>

    * Fix missing header.
    * Make sure a record can have only one parent.
    * Add save test (disable by default).

2006-10-10  Yen-Ju Chen <yjchen at gmail>

    * Basic implementation based on CollectionKit.

2005-05-05  Quentin Mathe <qmathe@club-internet.fr>
    
    * Source/GNUmakefile: Removed unneeded GNUSTEP_MAKEFILES definition which
    seems to break compilation with recent GNUstep version.
    
2005-05-04  Quentin Mathe <qmathe@club-internet.fr>

    * Source/BKBookmark.m: Fixed case mismatch which prevented compilation on 
    case sensitive system (patch provided by Rob Burns).

2005-03-10  Quentin Mathe <qmathe@club-internet.fr>

    * INSTALL: Updated to talk about BookmarkKit and not Gorm
    * Headers/BKBookmark.h:
    * Headers/BKBookmarkQuery.h:
    * Headers/BKBookmarkSearchResult.h:
    * Headers/BKBookmarkStore.h:
    * Source/BKBookmark.m:
    * Source/BKBookmarkQuery.m:
    * Source/BKBookmarkSearchResult.m:
    * Source/BKBookmarkStore.m:
    Updated in order BookmarkKit compiles (TrackerKit will be now optional) but
    still no implementation.
    * Source/GNUmakefile: Minor modifications.

2004-08-14  Quentin Mathe <qmathe@club-internet.fr>

    * ChangeLog:
    * README:
    * INSTALL:
    * GNUmakefile:
    * Headers/BKBookmark.h:
    * Headers/BKBookmarkQuery.h:
    * Headers/BKBookmarkSearchResult.h:
    * Headers/BKBookmarkStore.h:
    * Source/BKBookmark.m:
    * Source/BKBookmarkQuery.m:
    * Source/BKBookmarkSearchResult.m:
    * Source/BKBookmarkStore.m:
    * Source/GNUmakefile:
    Initial import.