@@ -1,3 +1,7 @@
+2006-10-14  Yen-Ju Chen <yjchen at gmail>
+
+    * Add title for bookmark.
+
 2006-10-13  Yen-Ju Chen <yjchen at gmail>
 
     * Fix top level;
